[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Board/Board_Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/layers/Board_Layer.gd" type="Script" id=2]
[ext_resource path="res://src/layers/EncounterLayer.gd" type="Script" id=3]
[ext_resource path="res://src/layers/TransitionLayer.gd" type="Script" id=4]

[node name="GameWorld" type="Node"]

[node name="Board" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="Board_Map" parent="Board" instance=ExtResource( 1 )]

[node name="Encounter" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="TransitionLayer" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="BlackTransition" type="ColorRect" parent="TransitionLayer"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 320.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Transition_Tween" type="Tween" parent="TransitionLayer"]
